:bug: Fix horizontal scrolling in expand panel

--- a/styles/kite-expand.less
+++ b/styles/kite-expand.less
@@ -19,7 +19,7 @@ kite-expand {
 
   kite-navigable-stack {
     flex: 1 1 auto;
-    overflow-y: auto;
+    overflow: hidden;
 
     > * {
       height: auto;
